# ziply

./: .gitignore  Cargo.toml  LICENSE  README.md  pack.yaml  ziply.yaml
src/: command.rs  main.rs  manifest.rs  pack.rs
