[package]
name = "ziply"
version = "0.1.1"
edition = "2021"
description = "A simple tool to easily specify directories inside ZIP files using YAML configuration."
homepage = "https://github.com/tktk4/ziply"
repository = "https://github.com/tktk4/ziply"
license = "MIT"
readme = "README.md"
keywords = ["zip", "util"]

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
serde = "1.0"
serde_yml = "0.0.11"
zip = "2.2.0"
